--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>1a.</i> Installation and Resources - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -2788,7 +2788,7 @@ color: white;
         <h2>Installing Julia</h2>  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     All the links mentioned on the website are included in <a href="/julia_book/links/">Links</a>, located in the left navigation bar.  </div>  </div></p>
-<p>To download Julia and access its official documentation, visit <a href=" http://www.julialang.org"> Julia&#39;s official website</a>. Note that the installation process depends on your computer&#39;s operating system.</p>
+<p>To download Julia and access its official documentation, visit <a href=" https://www.julialang.org"> Julia&#39;s official website</a>. Note that the installation process depends on your computer&#39;s operating system.</p>
 <p>      </div>
     </div>
   </div>
@@ -2859,7 +2859,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
