--- a/PAGES/09c_objectsAllocating/index.html
+++ b/PAGES/09c_objectsAllocating/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>9c.</i> Objects Allocating Memory - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -2955,7 +2955,7 @@ foo&#40;x&#41; &#61; sum&#40;x .* x&#41;                # 1 allocation from temp
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
