--- a/PAGES/10g_simd_LoopVectorization/index.html
+++ b/PAGES/10g_simd_LoopVectorization/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>10g.</i> Packages For SIMD - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -2805,11 +2805,11 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Caveats About Improper Use of @turbo</h2></p>
-<p>Unlike <code>@simd</code>, <code>@turbo</code> could return wrong results if used for certain operations. This is because the package makes some additional assumptions about operations with the goal of applying optimizations more aggressively. In particular, </p>
+<p>Unlike <code>@simd</code>, <code>@turbo</code> could return wrong results if used for certain operations. This is because the package makes some additional assumptions about operations with the goal of applying optimizations more aggressively. In particular, <code>@turbo</code></p>
 <ul>
-<li><p><code>@turbo</code> never checks index bounds </p>
+<li><p>never checks index bounds </p>
 </li>
-<li><p><code>@turbo</code> may provide wrong results if the outcome depends on a specific execution order of the iterations &#40;except for reductions&#41;.</p>
+<li><p>may provide wrong results if the outcome depends on a specific execution order of the iterations &#40;except for reductions&#41;.</p>
 </li>
 </ul>
 <p>Regarding the latter, computing a vector with cumulative sums of a vector will return incorrect results. This can be observed below, where we check the resulting vector by summing all its values.</p>
@@ -2870,7 +2870,7 @@ end</code></pre> </div></div>
       <div class="col-lg- mx-auto">
         <h2>Cases Covered</h2></p>
 <p>Considering that <code>@turbo</code> isn&#39;t suitable for all operations, let&#39;s present two of its primary applications. The first one arises <strong>when iterations are completely independent of each other</strong>, making the execution order of iterations irrelevant.</p>
-<p>For instance, the following code snippet transforms each element of a vector through a polynomial. </p>
+<p>For instance, the following code snippet transforms each element of a vector via a polynomial function. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3329,7 +3329,7 @@ foo&#40;x&#41; &#61; @turbo calculation.&#40;x&#41;</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
