--- a/PAGES/11c_multithread_tasks/index.html
+++ b/PAGES/11c_multithread_tasks/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>11c.</i> Task-Based Parallelism: @spawn - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -2807,7 +2807,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Enabling Multithreading</h2></p>
 <p>Julia initializes every session with a given pool of threads available. Each of these threads is responsible for executing a given set of instructions. Consequently, the number of threads delimits the number of instructions that the CPU can handle simultaneously.</p>
-<p>By default, Julia only operates with a single thread, requiring setting an alternative number of threads to enable multithreading. You can achieve this in VSCode by going to  <em>File</em> &gt;  <em>Preferences</em> &gt;  <em>Settings</em>. Then, you should search for the keyword  <em>threads</em>, prompting the following line:</p>
+<p>By default, Julia only operates with a single thread, requiring setting an alternative number of threads to enable multithreading. You can achieve this in VSCode or VSCodium by going to  <em>File</em> &gt;  <em>Preferences</em> &gt;  <em>Settings</em>. Then, you should search for the keyword  <em>threads</em>, prompting the following line:</p>
 <p> <div class="multiple_pics">  
     <img src="/julia_book/assets/PAGES/11c_multithread_tasks/pics/pic01.png" style="width:800px; height:auto; max-width:98%; margin-top:1em;">    
 </div> <br/></p>
@@ -3021,7 +3021,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
