--- a/PAGES/03d_scope/index.html
+++ b/PAGES/03d_scope/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>3d.</i> Variable Scope & Relevance of Functions - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3059,7 +3059,7 @@ expenditure_iPhones &#61; expenditure&#40;gross_value, tax_paid&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
