--- a/PAGES/06e_application01/index.html
+++ b/PAGES/06e_application01/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>6e.</i> Illustration - Johnny, the YouTuber - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3243,7 +3243,7 @@ stats_visits     &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div><
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
