--- a/PAGES/07d_TS-onTypes/index.html
+++ b/PAGES/07d_TS-onTypes/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>7d.</i> Preliminaries on Types - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3291,7 +3291,7 @@ y &#61; convert.&#40;Float64, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
