--- a/PAGES/09d_views/index.html
+++ b/PAGES/09d_views/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>9d.</i> Slice Views to Reduce Allocations - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -2898,7 +2898,7 @@ foo&#40;x&#41; &#61; max.&#40;@view&#40;x&#91;1:2:length&#40;x&#41;&#93;&#41;, 0
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
