--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>9f.</i> Reductions - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3339,7 +3339,7 @@ foo&#40;x&#41; &#61; reduce&#40;&#43;, map&#40;a -&gt; 2 * a, x&#41;&#41;</code>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
