--- a/PAGES/10f_simd_branchless/index.html
+++ b/PAGES/10f_simd_branchless/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>10f.</i> SIMD: Branchless Code - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3632,7 +3632,7 @@ foo&#40;x,y&#41;       &#61; @. ifelse&#40;Bool&#40;1 - &#33;&#40;x&gt;0.3&#41; 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
