--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title>Julia Book - Martin Alfaro</title>
+  <title><i>11b.</i> Introduction to Multithreading - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -3223,7 +3223,7 @@ println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 26, 2025 
+          © Martin Alfaro <br>Last Modified February 28, 2025 
       </span> 
   </div> 
 </footer>
