--- a/PAGES/11g_multithread_packages/index.html
+++ b/PAGES/11g_multithread_packages/index.html
@@ -58,7 +58,7 @@ header .jumbotron {
 
     
 <!-- WINDOWS TAB -->
-  <title><i>11g.</i> Packages for Multithreading - Julia Book - Martin Alfaro</title>
+  <title>11g. Packages for Multithreading - Julia Book - Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
 
 <!-- for LUNR -->
@@ -783,7 +783,7 @@ section a:hover{
         <input type="checkbox" id="toggleStyles">
         <span class="slider round"></span>
       </label>
-    </li>
+    </li>    
   </ul>
   
   <div class="personal_website">
@@ -859,6 +859,10 @@ color: white;
   font-family   : "Cormorant SC";
   font-weight   : bold;
 }
+
+
+
+
 
 
 </style>  
